--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 
     <header>
         <a class="aaa" href="https://startedup.in/">
-            <img class="logoImg li1" src="StartedUp.svg" alt="">
+            <img class="logoImg li1" src="/StartedUp.svg" alt="">
         </a>
         <div class="llcon">
             <a href="https://www.linkedin.com/company/startedup24/">
 
-                <img class="logoImg ll" src="linkedin.png" alt="">
+                <img class="logoImg ll" src="/linkedin.png" alt="">
             </a>
 
             <a href="https://www.instagram.com/_startedup/">
-                <img class="logoImg ll" src="Group 38.svg" alt="">
+                <img class="logoImg ll" src="/Group 38.svg" alt="">
             </a>
         </div>
 
