--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 
     <header>
         <a class="aaa" href="https://startedup.in/">
-            <img class="logoImg li1" src="/StartedUp.svg" alt="">
+            <img class="logoImg li1" src="StartedUp.svg" alt="">
         </a>
         <div class="llcon">
             <a href="https://www.linkedin.com/company/startedup24/">
 
-                <img class="logoImg ll" src="/linkedin.png" alt="">
+                <img class="logoImg ll" src="linkedin.png" alt="">
             </a>
 
             <a href="https://www.instagram.com/_startedup/">
-                <img class="logoImg ll" src="/Group 38.svg" alt="">
+                <img class="logoImg ll" src="Group 38.svg" alt="">
             </a>
         </div>
 
@@ -38,7 +38,7 @@
                 <div class="title1">
 
                     <a href="https://startedup.in">
-                        <img  class="logoImg1" src="/StartedUp.svg" alt="">
+                        <img  class="logoImg1" src="StartedUp.svg" alt="">
                     </a>
 
                     <span class="pre pp">
@@ -49,7 +49,7 @@
 
                 <div class="title11">
 
-                    <img class="logoImg2" src="/Raised.svg" alt="">
+                    <img class="logoImg2" src="Raised.svg" alt="">
                 </div>
 
             </div>
@@ -61,7 +61,7 @@
 
                 <div class="title11">
 
-                    <img class="logoImg2 logoimgg" src="/Group 3586 1.svg" alt="">
+                    <img class="logoImg2 logoimgg" src="Group 3586 1.svg" alt="">
                 </div>
 
                 <div class="tt1 pre">
@@ -144,7 +144,7 @@
                 
                 <div class="title11">
 
-                    <img class="logoImg2 logoimgg imggg" src="/image 7.svg" alt="">
+                    <img class="logoImg2 logoimgg imggg" src="image 7.svg" alt="">
                 </div>
 
                 <div class="tt1 pre tttt ">
@@ -166,7 +166,7 @@
 
                 <div class="title11">
 
-                    <img class="logoImg2 logoimgg imggg" src="/image 8.svg" alt="">
+                    <img class="logoImg2 logoimgg imggg" src="image 8.svg" alt="">
                 </div>
 
                 <div class="tt1  pre tttt">
@@ -187,7 +187,7 @@
                 
                 <div class="title11">
 
-                    <img class="logoImg2 logoimgg imggg" src="/image 9.svg" alt="">
+                    <img class="logoImg2 logoimgg imggg" src="image 9.svg" alt="">
                 </div>
 
                 <div class="tt1 pre tttt">
